--- a/slides/enlightenment-spec-of-executable-coding-code.html
+++ b/slides/enlightenment-spec-of-executable-coding-code.html
@@ -43,9 +43,10 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: 1024,
-				height: 1024,
-				margin: 0.04,
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1050,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1485,
+				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.05,
+				center: window.location.href.indexOf("?print-pdf") == -1,
 				hash: true,
 				slideNumber: true,
 				mathjax3: {
