--- a/slides/enlightenment-arithmetic-and-algebra.html
+++ b/slides/enlightenment-arithmetic-and-algebra.html
@@ -13,9 +13,13 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<header class="mytitle">
+			<header class="screen-title">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（算术和代数基础）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
+			</header>
+			<header class="print-title">
+				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（算术和代数基础）</p>
+				<p class="right-part">姓名：_____________；日期：_____________</p>
 			</header>
 			<div class="slides move-left">
 				<section data-markdown="gitlab/enlightenment-arithmetic-and-algebra.md"
@@ -43,9 +47,9 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1050,
-				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1485,
-				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.05,
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1575,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 2227.5,
+				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.10,
 				center: window.location.href.indexOf("?print-pdf") == -1,
 				hash: true,
 				slideNumber: true,
