--- a/slides/enlightenment-end-on-system.html
+++ b/slides/enlightenment-end-on-system.html
@@ -19,7 +19,7 @@
 			</header>
 			<header class="print-title">
 				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（进制的概念）</p>
-				<p class="right-part">姓名：_____________；日期：_____________</p>
+				<p class="right-part">姓名：____________________；日期：_______________</p>
 			</header>
 			<div class="slides move-left">
 				<section data-markdown="gitlab/enlightenment-end-on-system.md"
@@ -47,9 +47,9 @@
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
 			Reveal.initialize({
-				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1050,
-				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1485,
-				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.05,
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1575,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 2227.5,
+				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.10,
 				center: window.location.href.indexOf("?print-pdf") == -1,
 				hash: true,
 				slideNumber: true,
