--- a/slides/noijunior-graph-and-graph-theory.html
+++ b/slides/noijunior-graph-and-graph-theory.html
@@ -17,7 +17,7 @@
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">图及图论算法</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left">
+			<div class="slides move-left wide-code">
 				<section data-markdown="gitlab/noijunior-graph-and-graph-theory.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
