--- a/slides/enlightenment-combinatorics.html
+++ b/slides/enlightenment-combinatorics.html
@@ -13,11 +13,15 @@
 	</head>
 	<body>
 		<div class="reveal">
-			<header class="mytitle">
+			<header class="screen-title">
 				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（组合数学）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
-			<div class="slides move-left">
+			<header class="print-title">
+				<p class="left-part">考鼎<span>&reg;</span>学堂 / 信息学启蒙（组合数学）</p>
+				<p class="right-part">姓名：____________________；日期：_______________</p>
+			</header>
+			<div class="slides move-left narrow-code">
 				<section data-markdown="gitlab/enlightenment-combinatorics.md"
 						 data-separator="^\t\t\n"
 						 data-separator-vertical="^\t\n"
@@ -42,10 +46,10 @@
 			// More info about initialization & config:
 			// - https://revealjs.com/initialization/
 			// - https://revealjs.com/config/
-			Revel.initialize({
-				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1050,
-				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1485,
-				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.05,
+			Reveal.initialize({
+				width: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 1575,
+				height: (window.location.href.indexOf("?print-pdf") == -1) ? 1024 : 2227.5,
+				margin: (window.location.href.indexOf("?print-pdf") == -1) ? 0.04 : 0.10,
 				center: window.location.href.indexOf("?print-pdf") == -1,
 				hash: true,
 				slideNumber: true,
