--- a/slides/index.html
+++ b/slides/index.html
@@ -28,7 +28,7 @@
 							<li><a href="enlightenment-number-theory.html">3) 数论基础</a></li>
 							<li><a href="enlightenment-real-number-and-function.html">4) 实数和函数</a></li>
 							<li><a href="enlightenment-recurrence-iteration-recursion.html">5) 递推、迭代和递归</a></li>
-							<li><a href="enlightenment-fundamentals-of-geometry.html">6) 几何基础</a></li>
+							<li><a href="enlightenment-elementary-algebra-and-euclidean-geometry.html">6) 初等代数和欧氏几何</a></li>
 							<li><a href="enlightenment-combinatorics.html">7) 组合数学</a></li>
 							<li><a href="enlightenment-graph-and-graph-theory.html">8) 图和图论</a></li>
 							<li><a href="enlightenment-basic-data-structures.html">9) 基础数据结构</a></li>
