--- a/slides/enlightenment-homework-u2.html
+++ b/slides/enlightenment-homework-u2.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>魏永明的信息学系列课程：信息学启蒙（第二单元作业参考答案）</title>
+		<title>魏永明的信息学系列课程：信息学启蒙（第二单元作业讲解）</title>
 		<link rel="stylesheet" href="/dist/reset.css">
 		<link rel="stylesheet" href="/dist/reveal.css">
 		<link rel="stylesheet" href="/dist/theme/solarized.css">
@@ -14,7 +14,7 @@
 	<body>
 		<div class="reveal">
 			<header class="screen-title">
-				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（第二单元作业参考答案）</a></p>
+				<p><a href="/plzs">考鼎<span>&reg;</span>学堂：PLZS</a> / <a href="#/0">信息学启蒙（第二单元作业讲解）</a></p>
 				<p><a href="https://work.weixin.qq.com/ca/cawcde42325deca4ec" target="_blank">客服</a></p>
 			</header>
 			<header class="print-title">
